# QLogueLibrarian

./: .gitignore  CMakeLists.txt  LICENSE  README.md
qml/: LoadSection.qml  LogPanel.qml  Main.qml  MetaPanel.qml  MidiSection.qml  PluginLibrary.qml
src/: main.cpp
src/controller/: LogueCLIWrapper.cpp  LogueCLIWrapper.h
src/model/: KorgEnums.h
src/view/: MainWindow.cpp  MainWindow.h
